Added credentials page, data logging

--- a/templates/play_against_comp.html
+++ b/templates/play_against_comp.html
@@ -19,7 +19,19 @@
 
 
 	</head>
-	<body>				
+	<body>
+		<div class="overlayed"></div>
+		<div class="popup" id="credentials">
+			<h4 style="font-size:4vh;text-align:center;">Instructions</h4>
+			<p>Please enter the 10-digit code provided by the experimenter</p>
+			<div id="credentials_input">
+				<input type="text" placeholder=""></input>
+				<input type="submit" value="Submit" style="display:none"></input>
+			</div>
+			<button id="nextbutton" type="button" class="mybutton" style="top:50%;left:50%;width:10%;display:none">Next</button>
+		</div>
+
+		
 		<div class='container-fluid text-center'>
 			<div class="row">
 				<div class="container-fluid col-xs-8 col-xs-offset-2 canvas-container">
