--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,12 +1,83 @@
 /* ~ GLOBAL ~ */
 
+body{
+	font-family:helvetica;
+}
+
+
 html {
 	-moz-user-select: none;
   	-webkit-user-select: none;
   	-ms-user-select: none;
 }
 
-/* ~ GAME BOARD ~ */
+.container-fluid{
+	text-align:center;
+}
+
+
+.overlayed{
+  opacity:0.4; 
+  background:black; 
+  width:100%;
+  height:100%; 
+  z-index:10;
+  position:fixed;
+}
+
+.popup{
+	display:none;
+	position:absolute;
+	width:90%;
+	height:90%;
+	top:5%;
+	right:5%;
+	background-color:white;
+	border-radius:20px;
+	border:2px solid #666666;
+	z-index:20;
+}
+
+.popup p {
+	text-align:left;
+	margin-left:2%;
+	margin-right:2%;
+	margin-top:1.5%;
+	margin-bottom:1.5%;
+	font-size:3vh;
+}
+#credentials_input{
+	margin-left:2%;	
+}
+
+#credentials_input [type=text]{
+	position:relative;
+	vertical-align: middle;
+	border-radius: 4px;
+	border: 2px solid #666666;
+	padding: 0vh 1vh;
+	width: 25vw;
+	font-size:4vh;
+	height: 6vh;
+	margin: 0;
+}
+
+#credentials_input [type=submit]{
+	position:relative;
+	vertical-align: middle;
+	cursor:pointer;
+	color:#ffffff;
+	border-radius:4px;
+	border: 2px solid #666666;
+	background-color:#999999;
+	font-size: 2vh;
+	padding: 1vh 1vh;
+	margin: 0 auto;
+	height:6vh;
+	width:8vw;
+	text-decoration:none;
+	background-repeat:no-repeat;
+}
 
 .canvas-container{ padding:0%; }
 
