--- a/templates/play_against_comp.html
+++ b/templates/play_against_comp.html
@@ -46,6 +46,7 @@
 			<div class='row'>
 				<div class="col-xs-8 col-xs-offset-2">
 					<button type="button" class="mybutton" id="nextgamebutton" style="display:none">Next game</button>
+                                        <button type="button" class="mybutton" id="savebutton">Save</button>
 				</div>
 			</div>
 		</div>
