--- a/templates/play_against_comp.html
+++ b/templates/play_against_comp.html
@@ -12,11 +12,11 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<script src="../static/js/4inarow.js"></script>
+	<script src="../static/js/4inarow_standalone.js"></script>
 	<script src="../static/scripts/Code/makemove.js"></script>
 	
 	<link href = "../static/css/lib/bootstrap-12/bootstrap.min.css" rel = "stylesheet">
 	<link href = '../static/css/stylesheet.css' rel='stylesheet'>
-
 
 	</head>
 	<body>
@@ -28,7 +28,12 @@
 				<input type="text" placeholder=""></input>
 				<input type="submit" value="Submit" style="display:none"></input>
 			</div>
-			<button id="nextbutton" type="button" class="mybutton" style="top:50%;left:50%;width:10%;display:none">Next</button>
+		</div>
+		<div class="popup" id="instructions">
+			<h4 style="font-size:4vh;">Instructions</h4>
+			<img src="" style="width:70vw;border:none"></img>
+			<button id="previousbutton" type="button" class="mybutton" style="bottom:8%;left:43%;width:10%">Previous</button>
+			<button id="nextbutton" type="button" class="mybutton" style="bottom:8%;left:57%;width:10%">Next</button>
 		</div>
 
 		
