--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -2,7 +2,9 @@
 
 body{
 	font-family:helvetica;
+	text-align: center;
 }
+
 
 
 html {
@@ -46,6 +48,7 @@ html {
 	margin-bottom:1.5%;
 	font-size:3vh;
 }
+
 #credentials_input{
 	margin-left:2%;	
 }
