Added opponent level

--- a/templates/play_against_comp.html
+++ b/templates/play_against_comp.html
@@ -11,7 +11,7 @@
 	<script src="../static/js/lib/underscore-min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<script src="../static/js/4inarow.js"></script>
+	<script src="../static/js/4inarow_base.js"></script>
 	<script src="../static/js/4inarow_standalone.js"></script>
 	<script src="../static/scripts/Code/makemove.js"></script>
 	
