Added psiturk and staircase

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -13,6 +13,47 @@ html {
   	-ms-user-select: none;
 }
 
+
+.popup .alert {
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+
+#handle_error textarea{
+	font-size:2vh;
+	width:90%;
+	height:20%;
+	margin-left:2%;
+	margin-right:8%;
+}
+
+.load-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .container-fluid{
 	text-align:center;
 }
