--- a/templates/fourinarow_psiturk.html
+++ b/templates/fourinarow_psiturk.html
@@ -5,10 +5,10 @@
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge">
 	<meta name="viewport" content="width=device-width">
 	
-	<script src="../static/js/lib/jquery-2.2.4.min.js"></script>
-	<script src="../static/js/lib/jquery-ui.min.js"></script>
-	<script src="../static/js/lib/bootstrap-12/bootstrap.min.js"></script>
-	<script src="../static/js/lib/underscore-min.js"></script>
+	<script src="../static/lib/jquery.min.js"></script>
+	<script src="../static/lib/jquery-ui.min.js"></script>
+	<script src="../static/lib/bootstrap.min.js"></script>
+	<script src="../static/lib/underscore-min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="../static/js/psiturk.js" type="text/javascript"> </script>
