--- a/templates/exp.html
+++ b/templates/exp.html
@@ -5,13 +5,24 @@
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge">
 	<meta name="viewport" content="width=device-width">
 	
-	<script src="../static/lib/jquery.min.js"></script>
+	<script src="../static/lib/jquery-min.js"></script>
 	<script src="../static/lib/jquery-ui.min.js"></script>
 	<script src="../static/lib/bootstrap.min.js"></script>
 	<script src="../static/lib/underscore-min.js"></script>
+	<script src="../static/lib/backbone-min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script src="../static/js/psiturk.js" type="text/javascript"> </script>
+	<script src="../static/js/psiturk.js"></script>
+
+	<script type="text/javascript">
+		// These fields provided by the psiTurk Server
+		const uniqueId = "{{ uniqueId }}";  // a unique string identifying the worker/task
+		const condition = {{ condition }}; // the condition number
+		const counterbalance = {{ counterbalance }}; // a number indexing counterbalancing conditions
+		const adServerLoc = "{{ adServerLoc }}"; // the location of your ad (so you can send user back at end of experiment)
+		const mode = "{{ mode }}";
+	</script>
+
 	<script src="../static/js/4inarow_base.js"></script>
 	<script src="../static/js/4inarow_psiturk.js"></script>
 	<script src="../static/scripts/Code/makemove.js"></script>
