--- a/templates/fourinarow_standalone.html
+++ b/templates/fourinarow_standalone.html
@@ -5,7 +5,7 @@
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge">
 	<meta name="viewport" content="width=device-width">
 	
-	<script src="../static/lib/jquery.min.js"></script>
+	<script src="../static/lib/jquery-min.js"></script>
 	<script src="../static/lib/jquery-ui.min.js"></script>
 	<script src="../static/lib/bootstrap.min.js"></script>
 	<script src="../static/lib/underscore-min.js"></script>
