--- a/templates/exp.html
+++ b/templates/exp.html
@@ -43,7 +43,7 @@
 		</div>
 		<div class="popup" id="instructions">
 			<h4 style="font-size:4vh;">Instructions</h4>
-			<img src="" style="width:70vw;border:none"></img>
+			<img src="" style="height: 60%; width: auto;border:none"></img>
 			<button id="previousbutton" type="button" class="mybutton" style="bottom:8%;left:43%;width:10%">Previous</button>
 			<button id="nextbutton" type="button" class="mybutton" style="bottom:8%;left:57%;width:10%">Next</button>
 		</div>
@@ -73,6 +73,7 @@
 
 		
 		<div class='container-fluid text-center'>
+			<div class="clickprompt">Please click where you want to play a piece.</div>
 			<div class="row">
 				<div class="container-fluid col-xs-8 col-xs-offset-2 canvas-container">
 					<div class="canvas"></div>
@@ -80,6 +81,7 @@
 			</div>
 			<div class='row'>
 				<div class="headertext col-xs-8 col-xs-offset-2">
+					<div class="gamecount">Game</div>
 					<h1>Your turn</h1>
 				</div>
 			</div>
