Replace email addresses and link to Qualtrics BIS 11 form

--- a/templates/complete.html
+++ b/templates/complete.html
@@ -1,25 +1,14 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
-	<meta charset="utf-8" />
-	<title>Psychology Experiment</title>
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
-	<link rel="stylesheet" href="/static/css/style.css" type="text/css" />
-	<link rel="icon" href="/static/favicon.ico" />
-</head>
-
-<body>
-	<div id="container-not-an-ad" class="media">
-		<div class="media-body">
-			<h1>Thanks for playing!</h1>
-			<hr />
-			<div>
-				Please return to your previous questionnaire tab and <strong>press submit</strong> to continue.
-			</div>
-		</div>
-	</div>
-</body>
-
+	<body>
+		<script type="text/javascript">
+			const searchParams = new URLSearchParams(document.location.search);
+			const uniqueId = searchParams.get("uniqueId");
+			const workerId = uniqueId.split(':')[0];
+			const href = "https://nyu.qualtrics.com/jfe/form/SV_3WutBsz8GQSnxjL?LinkDataReference=" + encodeURIComponent(workerId);
+			window.location.replace(href);
+		</script>
+		You should be redirected to the next questionnaire.
+	</body>
 </html>
