--- a/templates/exp.html
+++ b/templates/exp.html
@@ -58,7 +58,7 @@
             <div class="alert alert-danger">
                 <h4 style="font-size:4vh;">Error!</h4>
             </div>
-            <p> We couldn't save your data! Please contact <u><font color="blue">cocosci.turk@gmail.com</font></u> to report the error. Then click the button below.</p>
+            <p> We couldn't save your data! Please contact <u><font color="blue">{{contact_address}}</font></u> to report the error. Then click the button below.</p>
             <button type="button" class="mybutton" id = "resubmit" style="bottom:8%;left:50%;width:15%">I reported the error</button>
         </div>
         <div class="popup" id="handle_error">
@@ -67,7 +67,7 @@
             </div>
             <p> The experiment encountered an error! <a>Click here</a> to report the error by email. Please describe at what point in the HIT the error occurred, and include the following:</p>
             <textarea disabled style="resize:none"></textarea>
-            <p>Then click the button below to submit the HIT. If you have trouble submitting the HIT, please contact <u><font color="blue">cocosci.turk@gmail.com</font></u></p>
+            <p>Then click the button below to submit the HIT. If you have trouble submitting the HIT, please contact <u><font color="blue">{{contact_address}}</font></u></p>
             <button type="button" class="mybutton" id = "submit_hit" style="bottom:8%;left:50%;width:15%">submit HIT</button>
         </div>
 
