--- a/templates/exp.html
+++ b/templates/exp.html
@@ -41,11 +41,15 @@
 				<input type="submit" value="Submit" style="display:none"></input>
 			</div>
 		</div>
-		<div class="popup" id="instructions">
+		<div class="popup" id="instructions" style="display: flex; flex-direction: column;">
 			<h4 style="font-size:4vh;">Instructions</h4>
-			<img src="" style="height: 60%; width: auto;border:none"></img>
-			<button id="previousbutton" type="button" class="mybutton" style="bottom:8%;left:43%;width:10%">Previous</button>
-			<button id="nextbutton" type="button" class="mybutton" style="bottom:8%;left:57%;width:10%">Next</button>
+			<div style="flex: 1; min-width: 0; min-height: 0;">
+				<img src="" style="width:100%; height:100%; object-fit:contain;"></img>
+			</div>
+			<div style="height: 3em;">
+				<button id="previousbutton" type="button" class="mybutton" style="left:43%;width:10%; transform: unset;">Previous</button>
+				<button id="nextbutton" type="button" class="mybutton" style="left:57%;width:10%; transform: unset;">Next</button>
+			</div>
 		</div>
 		<div class="popup" id="database_error">
             <div class="alert alert-danger">
