--- a/templates/exp.html
+++ b/templates/exp.html
@@ -82,7 +82,7 @@
 		<div class='container-fluid text-center'>
 			<div class="clickprompt">Please click where you want to play a piece.</div>
 			<div class="row">
-				<div class="container-fluid col-xs-8 col-xs-offset-2 canvas-container">
+				<div class="col-xs-8 col-xs-offset-2 canvas-container">
 					<div class="canvas"></div>
 				</div>
 			</div>
