--- a/templates/ad.html
+++ b/templates/ad.html
@@ -72,7 +72,7 @@
 
 							    <h1>Call for participants</h1>
 							    <p>
-									The XXX Lab at XXXXX University is looking for online participants 
+									The Computational Neurology Lab at the University of Oxford is looking for online participants 
 									for a brief psychology experiment. The only requirements 
 									are that you are at least 18 years old and are a fluent English 
 									speaker.  The task will take XXXXX minutes and will pay XXXXX.
