ad directs to consent. updated payment info

--- a/templates/ad.html
+++ b/templates/ad.html
@@ -75,7 +75,7 @@
 									The Computational Neurology Lab at the University of Oxford is looking for online participants 
 									for a brief psychology experiment. The only requirements 
 									are that you are at least 18 years old and are a fluent English 
-									speaker.  The task will take XXXXX minutes and will pay XXXXX.
+									speaker.  The task will take 60 minutes and will pay £10.
 							    </p>
 							    <div class="alert alert-danger">
 									<strong>This task can only be completed once.</strong> 
@@ -110,7 +110,7 @@
 							    </p>
 							    <script type="text/javascript">
 									function openwindow() {
-							    		popup = window.open('{{ server_location }}/exp?hitId={{ hitid }}&assignmentId={{ assignmentid }}&workerId={{ workerid }}','Popup','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=no,width='+1024+',height='+768+'');
+							    		popup = window.open('{{ server_location }}/consent?hitId={{ hitid }}&assignmentId={{ assignmentid }}&workerId={{ workerid }}','Popup','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=no,width='+1024+',height='+768+'');
 							  		}
 							    </script>
 							    <div class="alert alert-warning">
