--- a/templates/complete.html
+++ b/templates/complete.html
@@ -6,7 +6,7 @@
 			const searchParams = new URLSearchParams(document.location.search);
 			const uniqueId = searchParams.get("uniqueId");
 			const workerId = uniqueId.split(':')[0];
-			const href = "https://oxfordxpsy.az1.qualtrics.com/jfe/form/SV_723nGyqbuW6Opcp??LinkDataReference=" + encodeURIComponent(workerId);
+			const href = "https://oxfordxpsy.az1.qualtrics.com/jfe/form/SV_723nGyqbuW6Opcp?LinkDataReference=" + encodeURIComponent(workerId);
 			window.location.replace(href);
 		</script>
 		You should be redirected to the next questionnaire.
