added lab logo. resized

--- a/templates/ad.html
+++ b/templates/ad.html
@@ -56,7 +56,8 @@
 		<div id="container-not-an-ad" class="media">
 			<div class="media-left pull-left" href="#">
 						<!-- REPLACE THE LOGO HERE WITH YOUR  UNIVERSITY, LAB, or COMPANY -->
-						<img id="adlogo" src="{{ server_location }}/static/images/university.png" alt="Lab Logo" />
+						<img id="adlogo" src="{{ server_location }}/static/images/university.png" alt="Lab Logo"  style="width:200px;height:200px"/>
+						<img id="adlogo" src="{{ server_location }}/static/images/CompNeurolLab.png" alt="Lab Logo" style="width:300px;height:200px"/>
 			</div>
 			<div class="media-body">
 
