--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -11,7 +11,8 @@
 		<div id="container-not-an-ad" class="media">
 			<div class="media-left pull-left" href="#">
 						<!-- REPLACE THE LOGO HERE WITH YOUR  UNIVERSITY, LAB, or COMPANY -->
-						<img id="adlogo" src="/static/images/university.png" alt="Lab Logo" />
+						<img id="adlogo" src="{{ server_location }}/static/images/university.png" alt="Lab Logo"  style="width:200px;height:200px"/>
+						<img id="adlogo" src="{{ server_location }}/static/images/CompNeurolLab.png" alt="Lab Logo" style="width:300px;height:200px"/>
 			</div>
 			<div class="media-body">
 						<h1>Thanks for your participation!</h1>
