added ethics number to consent

--- a/templates/consent.html
+++ b/templates/consent.html
@@ -220,7 +220,7 @@
                     <P LANG="en-US" CLASS="western" ALIGN=LEFT STYLE="widows: 0; orphans: 0">
                     This study has been reviewed by, and received ethics clearance
                     through, the University of Oxford Central University Research Ethics
-                    Committee (Reference number: ___________)</P>
+                    Committee (Reference number: R71008/RE001)</P>
                     <H1 LANG="en-US" CLASS="western">Who do I contact if I have a concern
                     about the study or I wish to complain?</H1>
                     <P LANG="en-US" CLASS="western" ALIGN=LEFT STYLE="widows: 0; orphans: 0">
